--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>
 
 </body>
