--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </a>
             <a href="#">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>    
         </div>
 
