--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cédric Berck | Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
     <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
 
@@ -32,14 +32,17 @@
         </div>
         <div id="social">
             <a href="https://github.com/cberck" target="blank">
-                <i class="fa fa-github-alt" aria-hidden="true"></i>
+                <i class="fa-brands fa-github-alt"></i>
             </a>
             <a href="#">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
             </a>
             <a href="#">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa-brands fa-twitter"></i>
             </a>    
+            <a href="#">
+                <i class="fa-brands fa-discord"></i>
+            </a> 
         </div>
 
     </div>
